[package]
name = "slop"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
clap = {version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
serde = {version = "1.0.219", features = ["derive"]}
thiserror = "2.0.12"
tokio = {version = "1.45.0", features = ["rt", "macros", "rt-multi-thread"] }
toml = "0.8.22"
